--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@ body {
   line-height: 1.15;
 }
 header {
+  position: relative;
   height: 1.25rem;
   background: url('../images/head_bg.png') no-repeat;
   background-size: 100% 100%;
@@ -19,6 +20,88 @@ header h1 {
   text-align: center;
   line-height: 1rem;
 }
-.box {
-  width: 1rem;
+header .showTime {
+  position: absolute;
+  right: 0.375rem;
+  bottom: 0rem;
+  line-height: 0.9375rem;
+  color: rgba(255, 255, 255, 0.7);
+}
+.mainbox {
+  min-width: 1024px;
+  max-width: 1920px;
+  margin: 0 auto;
+  padding: 0.125rem 0.125rem 0;
+  display: flex;
+}
+.mainbox .colum {
+  flex: 3;
+}
+.mainbox .colum:nth-child(2) {
+  flex: 5;
+}
+.mainbox .panel {
+  position: relative;
+  height: 3.875rem;
+  border: 1px solid rgba(25, 186, 139, 0.17);
+  background: url(../images/line1.png);
+  padding: 0 0.1875rem 0.5rem;
+  margin-bottom: 0.1875rem;
+}
+.mainbox .panel::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: '';
+  width: 10px;
+  height: 10px;
+  border-top: 2px solid #02a6b5;
+  border-left: 2px solid #02a6b5;
+}
+.mainbox .panel::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  content: '';
+  width: 10px;
+  height: 10px;
+  border-top: 2px solid #02a6b5;
+  border-right: 2px solid #02a6b5;
+}
+.mainbox .panel .panel-footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+.mainbox .panel .panel-footer::before {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  content: '';
+  width: 10px;
+  height: 10px;
+  border-left: 2px solid #02a6b5;
+  border-bottom: 2px solid #02a6b5;
+}
+.mainbox .panel .panel-footer::after {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  content: '';
+  width: 10px;
+  height: 10px;
+  border-right: 2px solid #02a6b5;
+  border-bottom: 2px solid #02a6b5;
+}
+.mainbox .panel h2 {
+  height: 0.6rem;
+  line-height: 0.6rem;
+  text-align: center;
+  color: #fff;
+  font-size: 0.25rem;
+}
+.mainbox .panel .chart {
+  height: 3rem;
+  background-color: pink;
 }
