--- a/css/index.less
+++ b/css/index.less
@@ -11,18 +11,118 @@ body {
 }
 
 header {
+    position: relative;
     height: 1.25rem;
     background: url('../images/head_bg.png') no-repeat;
     background-size: 100% 100%;
 
-    h1{
+    h1 {
         color: #fff;
         font-size: .475rem;
         text-align: center;
         line-height: 1rem;
     }
+
+    .showTime {
+        position: absolute;
+        right: .375rem;
+        bottom: 0rem;
+        line-height: .9375rem;
+        color: rgba(255, 255, 255, 0.7);
+    }
 }
 
-.box {
-    width: 1rem;
+.mainbox {
+    min-width: 1024px;
+    max-width: 1920px;
+    margin: 0 auto;
+    padding: .125rem .125rem 0;
+    display: flex;
+
+    .colum {
+        flex: 3;
+
+        &:nth-child(2) {
+            flex: 5;
+        }
+    }
+
+    .panel {
+        position: relative;
+        height: 3.875rem;
+        border: 1px solid rgba(25, 186, 139, .17);
+        background: url(../images/line1.png);
+        padding: 0 .1875rem .5rem;
+        margin-bottom: .1875rem;
+
+        &::before {
+            position: absolute;
+            top: 0;
+            left: 0;
+            content: '';
+            width: 10px;
+            height: 10px;
+            border-top: 2px solid #02a6b5;
+            border-left: 2px solid #02a6b5;
+        }
+
+        &::after {
+            position: absolute;
+            top: 0;
+            right: 0;
+            content: '';
+            width: 10px;
+            height: 10px;
+            border-top: 2px solid #02a6b5;
+            border-right: 2px solid #02a6b5;
+        }
+
+        .panel-footer {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+
+            &::before {
+                position: absolute;
+                left: 0;
+                bottom: 0;
+                content: '';
+                width: 10px;
+                height: 10px;
+                border-left: 2px solid #02a6b5;
+                border-bottom: 2px solid #02a6b5;
+            }
+
+            &::after {
+                position: absolute;
+                right: 0;
+                bottom: 0;
+                content: '';
+                width: 10px;
+                height: 10px;
+                border-right: 2px solid #02a6b5;
+                border-bottom: 2px solid #02a6b5;
+            }
+
+        }
+
+
+        h2 {
+            height: .6rem;
+            line-height: .6rem;
+            text-align: center;
+            color: #fff;
+            font-size: .25rem;
+        }
+
+        .chart {
+            height: 3rem;
+            background-color: pink;
+        }
+
+    }
+
+
+
 }
