finished bar charts model

--- a/css/index.less
+++ b/css/index.less
@@ -129,7 +129,7 @@ header {
 
         .chart {
             height: 3rem;
-            background-color: pink;
+            // background-color: pink;
         }
 
     }
