--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,9 @@ li {
 body {
   background: url('../images/bg.jpg') no-repeat top center;
   line-height: 1.15;
+  min-width: 1024px;
+  max-width: 1920px;
+  background-size: 100% 100%;
 }
 header {
   position: relative;
@@ -110,6 +113,14 @@ header .showTime {
   color: #fff;
   font-size: 0.25rem;
 }
+.mainbox .panel h2 a {
+  color: #fff;
+  text-decoration: none;
+  margin: 0 0.125rem;
+}
+.mainbox .panel h2 a:hover {
+  color: blue;
+}
 .mainbox .panel .chart {
   height: 3rem;
 }
@@ -184,6 +195,7 @@ header .showTime {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 5;
   width: 100%;
   height: 10.125rem;
 }
@@ -196,7 +208,7 @@ header .showTime {
   width: 6.475rem;
   height: 6.475rem;
   transform: translate(-50%, -50%);
-  background: url(../images/map.png);
+  background: url(../images/map.png) no-repeat;
   background-size: 100% 100%;
   opacity: 0.3;
 }
