--- a/css/index.less
+++ b/css/index.less
@@ -59,6 +59,7 @@ header {
         &:nth-child(2) {
             flex: 5;
             margin: 0 .125rem .1875rem;
+            overflow: hidden;
         }
     }
 
@@ -292,8 +293,17 @@ header {
         }
     }
 
+}
 
+/* 约束屏幕尺寸 */
+@media screen and (max-width: 1024px) {
+    html {
+        font-size: 42px !important;
+    }
+}
 
-
-
+@media screen and (min-width: 1920px) {
+    html {
+        font-size: 80px !important;
+    }
 }
